L14 and other fixes

--- a/L10/L10.tex
+++ b/L10/L10.tex
@@ -190,6 +190,6 @@ Think about it like this: in the integers, if you consider the ideal generated b
 \end{thm}
 \begin{proof}~\\
 	Suppose $R[X]$ is a PID (in particular, an integral domain), then $R\subset R[X]$ is an integral domain. We use a clever trick
-	\[R[X]/(X) \cong R \implies (X) \text{ is prime} \implies (X) \text{ is maximal} \implies R \text{ is a field}\]
+	\[R[X]/(X) \cong R \implies (X) \text{ is prime} \implies (X) \text{ is maximal} \implies R \text{ is a field}\qedhere\]
 \end{proof}
 \end{document}
