--- a/L12/L12.tex
+++ b/L12/L12.tex
@@ -25,7 +25,7 @@
 	\[a\in I =\bigcup\limits_{n\in \N} I_n\implies a\in I_N \]
 	for some $N\in \N$.\\
 	Hence $(a)\subset I_n$ implying $I\subset I_N$ and so we deduce
-	\[I=I_N=I_{N+1}=I_{N+2}=\dots\]
+	\[I=I_N=I_{N+1}=I_{N+2}=\dots\qedhere\]
 \end{proof}
 \begin{thm}[title = PID IS UFD]
 	Every PID is a UFD.
@@ -163,7 +163,7 @@ Let $R$ be an commutative integral domain with $1\ne 0$. Recall some facts we've
 	There exist $q(X),r(X)\in F[X]$ and $Q(X), R(X)\in K[X]$ with $\deg r< \deg b$ and $\deg R< \deg b$, such that
 	\[a(X)=q(X)\rdot b(X)+r(X)\quad a(X)=Q(X)\rdot b(X)+R(X)\]
 	But there is uniqueness since $q,r\in K[X]$ it must mean that
-	\[q(X)=Q(X)\quad r(X)=R(X)\]
+	\[q(X)=Q(X)\quad r(X)=R(X)\qedhere\]
 \end{proof}
 \begin{crl}
 	$b(X)|a(X)$ in $K[X]$ \textit{iff} $b(X)|a(X)$ in $F[X]$
