--- a/L13/L13.tex
+++ b/L13/L13.tex
@@ -2,7 +2,6 @@
 \setcounter{chapter}{12}
 
 \begin{document}
-\phantomsection
 \chapter{L13: Polynomial Rings over UFDs}
 
 \begin{lem}[title = Gauss' Lemma]
@@ -63,7 +62,7 @@ Observe that $F[X]^\times = F$, i.e the constant polynomials.
 	\begin{align*}
 	30\rdot p(X)&=(15X+10)\rdot (30X+6)\\
 	15\rdot p(X)&=(15X+10)\rdot (15X+3)\\
-	p(X) &= (3X+2)\rdot (5X+1)
+	p(X) &= (3X+2)\rdot (5X+1)\qedhere
 	\end{align*}
 \end{proof}
 To rephrase Gauss' Lemma:\\ \textit{If $p(X)$ is irreducible in $R[X]$, then it is \textbf{still} irreducible in $F[X]$}\\
