--- a/L3/L3.tex
+++ b/L3/L3.tex
@@ -38,7 +38,7 @@
 		\begin{align*}
 			&(a_nX^n+a_{n-1}X^{n-1}+\dots+ a_1X+a_0) \rdot (b_nX^n+b_{n-1}X^{n-1}+\dots+b_1X+b_0) \\
 			& \begin{aligned}=(a_0\rdot b_0)+(a_1\rdot b_0+a_0\rdot b_1)X &+ (a_2\rdot b_0 + a_1\rdot b_1+a_0\rdot b_2)X^2\\
-			&+\dots+\left(\sum_{k=0}^{l}a_k\rdot b_{l-k}\right) X^l + \dots + (a_n\rdot b_m)X^{n+m}
+			&+\dots+\left(\sum_{k=0}^{l}a_k\rdot b_{l-k}\right) X^l + \dots + (a_n\rdot b_m)X^{n+m} \qedhere
 			\end{aligned}
 		\end{align*}
 	\end{proof}
