--- a/L4/L4.tex
+++ b/L4/L4.tex
@@ -91,7 +91,7 @@ becomes
 	&\obar{a}+\obar{(-a)}=\obar{a+(-a)} =\obar{0} = \obar{(-a)+a}=\obar{(-a)}+\obar{a}\\
 	&\obar{a}+(\obar{b}+\obar{c}) = \obar{a}+(\obar{b+c}) = \obar{a+(b+c)} = \obar{(a+b)+c} = \obar{(a+b)}+\obar{c}=(\obar{a}+\obar{b})+\obar{c}\\
 	&\obar{a}\rdot (\obar{b}\rdot \obar{c})=\obar{a}\rdot (\obar{bc})=\obar{a\rdot (b\rdot c)}=\obar{(a\rdot b)\rdot c} = \obar{ab}\rdot \obar{c}=(\obar{a}\rdot \obar{b})\rdot \obar{c}\\
-	&\obar{a}\rdot (\obar{b}+\obar{c})=\obar{a}\rdot (\obar{b+c})=\obar{a\rdot (b+c)}=\obar{a\rdot b+a\rdot c}=\obar{ab}+\obar{ac}=\obar{a}\rdot \obar{b}+\obar{a}\rdot \obar{c}
+	&\obar{a}\rdot (\obar{b}+\obar{c})=\obar{a}\rdot (\obar{b+c})=\obar{a\rdot (b+c)}=\obar{a\rdot b+a\rdot c}=\obar{ab}+\obar{ac}=\obar{a}\rdot \obar{b}+\obar{a}\rdot \obar{c} \qedhere
 	\end{align*}
 \end{proof}
 \begin{dfn}[title=Ideal]
