--- a/L5/L5.tex
+++ b/L5/L5.tex
@@ -167,6 +167,6 @@ Similarly, we will write $I=(a_1,\dots, a_n)$ for finitely generated ideals.
 	\[\bigcap_{\mathclap{\substack{I \subset R \\A\subset I} } } I\subset (A) \]
 	because $(A)$ is an ideal.
 	Therefore,
-		\[(A)= \bigcap_{\mathclap{\substack{I \subset R\\A\subset I} } } I\]
+		\[(A)= \bigcap_{\mathclap{\substack{I \subset R\\A\subset I} } } I\qedhere\]
 \end{proof}
 \end{document}
