--- a/L6/L6.tex
+++ b/L6/L6.tex
@@ -141,6 +141,6 @@ We also say that if $b\in (a)$, that $a$ \textbf{divides} $b$, i.e $a\mid b$.
 	But $P$ is prime, so either $a\in P$ or $b \in P$, i.e $\obar{a}=\obar{0},\obar{b}=\obar{0}$.\\
 	$\Leftarrow$\\
 	If $R/P$ is integral and $a\rdot b\in P$, then
-	\[\obar{a\rdot b}=\obar{0}\implies \underbrace{\obar{a}=\obar{0} \text{ or } \obar{b} = \obar{0}}_{R/P \text{ integral }} \implies a\in P \text{ or } b \in P\]
+	\[\obar{a\rdot b}=\obar{0}\implies \underbrace{\obar{a}=\obar{0} \text{ or } \obar{b} = \obar{0}}_{R/P \text{ integral }} \implies a\in P \text{ or } b \in P\qedhere\]
 \end{proof}
 \end{document}
