--- a/Main.tex
+++ b/Main.tex
@@ -20,7 +20,6 @@
 \usetikzlibrary{shapes,fit}
 \setlist[enumerate]{label=(\roman*)}
 \usepackage{breqn}
-\usepackage{sectsty}
 \usepackage{titletoc}
 \usepackage{hyperref}
 \usepackage[all]{hypcap}
@@ -31,7 +30,6 @@
 	urlcolor={blue!80!black}
 }
 
-\def\HyperRaiseLinkDefault{1.5cm}%
 
 
 \titlecontents{chapter}[0em]{\smallskip\bfseries}%\vspace{1cm}%
@@ -47,8 +45,6 @@
 \makeatletter
 \xpatchcmd{\@thm}{\thm@headpunct{.}}{\thm@headpunct{}}{}{}
 \makeatother
-
-\chapterfont{\centering}
 
 \tcbuselibrary{theorems}
 
@@ -82,6 +78,7 @@
 		\else	
 			 :\hspace{0.4em} \l__hushus_tcb_title_tl
 		 \fi} }
+	 	\def\HyperRaiseLinkDefault{1.5cm}%
 		\hushus_tcb_begin:nVV {#2inner} \l__hushus_tcb_title_tl \l__hushus_tcb_label_tl
 	}
 	{
@@ -241,4 +238,5 @@ boxed title style = {colback=green!35!black}
 \subfile{L11/L11}
 \subfile{L12/L12}
 \subfile{L13/L13}
+\subfile{L14/L14}
 \end{document}
