--- a/L11/L11.tex
+++ b/L11/L11.tex
@@ -128,7 +128,7 @@
 	20=2^2\rdot 5 \to 20 =2^2\rdot 3^0\rdot 5^1 
 	\end{pmatrix}\]
 	\begin{claim}
-		\[d=p_1^{\min\{e_1,d_1\}}\rdot p_2^{\min\{e_2,d_2\}}\rdot \dots \rdot p_n^{\min\{e_n,d_n\}}\]
+		$d=p_1^{\min\{e_1,d_1\}}\rdot p_2^{\min\{e_2,d_2\}}\rdot \dots \rdot p_n^{\min\{e_n,d_n\}}$
 		is the $gcd(a,b)$.
 	\end{claim}
 	\begin{proof}
