--- a/L13/L13.tex
+++ b/L13/L13.tex
@@ -20,7 +20,7 @@ Observe that $F[X]^\times = F$, i.e the constant polynomials.
 	2\rdot 3\rdot 5(15X^2+13X+2) &= \left[2\rdot 3 \rdot \left(\frac{5}{2}X + \frac{5}{3}\right) \right] \rdot  \left[5\rdot \left(6X + \frac{6}{5}\right)\right] \\
 	&= [15X+10] \rdot{}  [30X+6]\\
 	15X^2+13X+2&=\left[\frac{2\rdot 3}{5}\left(\frac{5}{2}X+\frac{5}{3}\right)\right]\rdot \left[\frac{5}{2\rdot 3}\left(6X+\frac{6}{5}\right)\right]\\
-	&= \underbrace{3X+2}_{a(X)} \underbrace{5X+1}_{b(X)}
+	&= [\underbrace{3X+2}_{a(X)}]\rdot{}  [\underbrace{5X+1}_{b(X)}]
 	\end{align*}
 \end{example}	
 \begin{proof}
