--- a/L14/L14.tex
+++ b/L14/L14.tex
@@ -145,7 +145,7 @@ The goal of this lecture is to factor (or check for factors) of polynomials
 	where $l,k>0$.\\
 	If $c_0,c_1,\dots,c_{n-1}\in P$, then
 	\begin{align*}
-	\obar{q(X)}=&\obar{X^n+c_{n-1}X^{n-1}+\dots+c_0=\obar{X^n}} \in (R/P)[X] \\
+	\obar{q(X)}=&\obar{X^n+c_{n-1}X^{n-1}+\dots+c_0}=\obar{X^n} \in (R/P)[X] \\
 	 =&\obar{a(X)}\rdot \obar{b(X)}
 	\end{align*}
 	i.e $\obar{a(X)}\rdot \obar{b(X)} = \obar{X^n}$. Then necessarily
