--- a/L9/L9.tex
+++ b/L9/L9.tex
@@ -19,8 +19,10 @@
 	(r_\alpha)_{\alpha\in A}+(s_\alpha)_{\alpha\in A}&\coloneqq (r_\alpha +s_\alpha)_{\alpha\in A}\\
 	(r_\alpha)_{\alpha\in A}\rdot (s_\alpha)_{\alpha\in A}&\coloneqq (r_\alpha \rdot s_\alpha)_{\alpha\in A}
 	\end{align*}
-	Given $a,b\in \Z$, we say they are \textbf{relatively prime} if the greatest common divisor is $1$.\\
-	Equivalently (Bezout's Identity), we say $a,b$ are relatively prime if there exists $m,n\in\Z$ such that \[am+bn=1\]
+\end{dfn}
+\begin{dfn}[title = Relatively Prime Integers]
+Given $a,b\in \Z$, we say they are \textbf{relatively prime} if the greatest common divisor is $1$.\\
+Equivalently (Bezout's Identity), we say $a,b$ are relatively prime if there exists $m,n\in\Z$ such that \[am+bn=1\]
 \end{dfn}
 \begin{dfn}[title = Comaximal Ideals]
 	In a commutative ring $R$ with $1\ne 0$, we say two ideals $A,B\subset R$ are \textbf{comaximal} (i.e relatively prime) if $A+B=R$. This implies there exists a sum $a+b$ such that $a+b=1$.
