Recompiled Individual Lectures

--- a/L3/L3.tex
+++ b/L3/L3.tex
@@ -130,7 +130,7 @@ Both proofs rely on using the Subring Criterion Test mentioned in Lecture 2.
 	\end{claim}
 	\begin{proof}
 		Again using the ring homomorphism definition
-		\[0=f(0_R)=f(b+(-b))=f(b)+f(-b) \implies f(-b)=-f(b)\]
+		\[0=f(0_R)=f(b+(-b))=f(b)+f(-b) \implies f(-b)=-f(b)\qedhere\]
 	\end{proof}
 	Therefore, with the subring criterion satisfied, then $\Img f$ is a subring in $S$.
 	\end{proof}
