Formatting changes and title page

--- a/L10/L10.tex
+++ b/L10/L10.tex
@@ -115,7 +115,7 @@ Think about it like this: in the integers, if you consider the ideal generated b
 		We write $d=\gcd(a,b)$ or sometimes just $d=(a,b)$.
 	\end{enumerate}
 \end{dfn}
-\textit{Recall} that $b\mid a$ if and only if $(a)\subset (b)$.
+\textbf{Recall} that $b\mid a$ if and only if $(a)\subset (b)$.
 \begin{dfn}[title = Ideal GCD]
 	Let $I = (a,b)\subset R$, then $d\in R$ is a \textbf{greatest common divisor} $d=\gcd(a,b)$ if
 	\begin{enumerate}
