--- a/L11/L11.tex
+++ b/L11/L11.tex
@@ -45,7 +45,7 @@
 	\[2+\sqrt{-5}=(a+b\sqrt{-5})\rdot (c+d\sqrt{-5})\]
 	Then
 	\[N(2+\sqrt{-5}) = 4+5 =9 \implies N(a+b\sqrt{-5})\mid 9 \implies N(a+b\sqrt{-5}) = \pm 1 \text{ or } \pm 3\]
-	\textit{Observe} that if $b\ne 0$, then \[N(a+b\sqrt{-5}) = a^2+5b^2\ge 5\]
+	\Obs that if $b\ne 0$, then \[N(a+b\sqrt{-5}) = a^2+5b^2\ge 5\]
 	Therefore
 	\[b=0\implies N(a+b\sqrt{-5})=N(a)=a^2\implies N(a+b\sqrt{-5})=1\implies a+b\sqrt{-5}\in \Z[\sqrt{-5}]^\times\]
 \end{proof}
@@ -75,7 +75,7 @@
 \begin{example}
 	In $\Z$, the irredcibles are the primes (and their negatives)
 \end{example}
-\textit{Observe} that the factorization of any integer into primes is \underline{unique}!
+\Obs that the factorization of any integer into primes is \underline{unique}!
 \begin{dfn}[title = Unique Factorization Domain]
 	A \textbf{unique factorization domain} (UFD) is an integral domain $R$ such that for all $r\in r\setminus \{0\},\, r\notin R^\times$
 	\begin{enumerate}
