--- a/L13/L13.tex
+++ b/L13/L13.tex
@@ -10,7 +10,7 @@
 	\[r\rdot A(X) = a(X)\in R[X],\quad s\rdot B(X) = b(X) \in R[X]\]
 	and $p(X) = a(X)\rdot b(X)$.
 \end{lem}
-Observe that $F[X]^\times = F$, i.e the constant polynomials. 
+\Obs that $F[X]^\times = F$, i.e the constant polynomials. 
 \[A(X),B(X) \in F[X]^\times \implies \deg A, \deg B \ge 1\]
 \begin{example}
 	Consider the polynomial
