--- a/L2/L2.tex
+++ b/L2/L2.tex
@@ -5,7 +5,7 @@
 \chapter{L2: More Examples}
 Let's see some basic properties of a ring $R$:
 \begin{enumerate}
-	\item $0\rdot a= a\rdot 0=0 \quad \forall a \in R$
+	\item $0\rdot a= a\rdot 0=0, \quad \forall a \in R$
 	\begin{proof}
 		Let $a$ be in $R$, then:
 		\begin{align*}
@@ -15,7 +15,7 @@ Let's see some basic properties of a ring $R$:
 			\Rightarrow& 0 = 0 \rdot a\qedhere
 		\end{align*}
 	\end{proof}
-	\item $(-a)\rdot b = a\rdot (-b) = -(a\rdot b) \quad \forall a,b \in R$
+	\item $(-a)\rdot b = a\rdot (-b) = -(a\rdot b), \quad \forall a,b \in R$
 	\begin{proof}
 		Let $a,b$ be in $R$, then:
 		\[a\rdot b + -(a \rdot b) = 0 \quad \textrm{(by definition)}\]
@@ -25,7 +25,7 @@ Let's see some basic properties of a ring $R$:
 			\Rightarrow& -(a\rdot b) = (-a)\rdot b\qedhere
 		\end{align*}
 	\end{proof}
-	\item $(-a)\rdot (-b)=a\rdot b \quad a,b \in R$
+	\item $(-a)\rdot (-b)=a\rdot b, \quad a,b \in R$
 	\begin{proof}
 		Let $a,b$ be in $R$, then:
 		\[(-a)\rdot (-b) = - (a\rdot (-b)) = -(-(a\rdot b)) \]
@@ -141,7 +141,7 @@ A field $F$ is a commutative ring with $1\ne 0$ such that $F^\times = F \setminu
 	\end{pmatrix}$ is a zero divsor.
 \end{example}
 \begin{example}
-	$\Z$ is an integral domain
+	$\Z$ is an integral domain,
 \end{example}
 \begin{prop}[title=Cancellation Law]
 	Let $R$ be a ring and $a,b,c\in R$.\newline
