--- a/L3/L3.tex
+++ b/L3/L3.tex
@@ -5,7 +5,7 @@
 	\chapter{L3: Ring Homomorphisms}
 	\section*{Polynomial Rings}
 	Fix a commutative ring $R$ with $1$ (e.g. $R=\Z, R=\Q$, etc)
-	Let $X$ be an indeterminate (this means $X$ is just a symbol without an exact representation, compared to to when you think $x$ is a variable representing a number).
+	Let $X$ be an indeterminate (this means $X$ is just a symbol without an exact representation, compared to to when you think $x$ is a variable representing a number). \href{https://en.wikipedia.org/wiki/Indeterminate_(variable)}{Read more about it here!}
 	\begin{dfn}[title = Polynomial in a ring]
 		A \textbf{polynomial} in $X$ with coefficients in $R$ is a formal, finite sum
 		\[a_nX^n+a_{n-1}X^{n-1}+\dots+a_1X+a_0, \quad a_i\in R, i\in \{0, \dots, n\}\]
