--- a/L6/L6.tex
+++ b/L6/L6.tex
@@ -71,7 +71,7 @@ and specifically this is the smallest ideal needed to contain $A$.
 		&IJ&
 	\end{tikzcd}
 \end{prop}
-\textit{Note:} $I\rdot I=I^2, \dots, \underbrace{I\rdot I\rdot \dots \rdot I}_{n-\text{times}}=I^n$
+\Note $I\rdot I=I^2, \dots, \underbrace{I\rdot I\rdot \dots \rdot I}_{n-\text{times}}=I^n$
 \begin{example}
 	Consider $2\Z, 3\Z \subset Z$, then
 	\[2\Z\rdot 3\Z = \left\{ \left. \sum_{k=1}^n 2a_k\rdot 3b_k\right| a_k,b_k\in Z\right\} = \left\{ \left.6\left(\sum_{k=1}^n a_k\rdot b_k\right)\right| a_k,b_k\in Z\right\}=6\Z\]
@@ -101,7 +101,7 @@ Assume $R$ is a commutative ring w/ $1\ne 0$. \\
 If $a\in R$, then
 \[(a)=\{ra\mid a\in R\} \quad \text{(the "multiples" of a)}\]
 e.g. $2\Z=\{2n\mid n\in Z\}=(2)$\\
-\textit{Note:} We sometimes write
+\Note We sometimes write
 \[(a)=R\rdot a=a\rdot R\]
 We also say that if $b\in (a)$, that $a$ \textbf{divides} $b$, i.e $a\mid b$.
 \begin{claim}
