Recompile Individual with Bash Script

--- a/L14/L14.tex
+++ b/L14/L14.tex
@@ -160,7 +160,7 @@ The goal of this lecture is to factor (or check for factors) of polynomials
 	\[(a_2\rdot b_0+\underbrace{a_1\rdot b_1}_{\in P} + \underbrace{a_0\rdot b_2}_{\in P}) \implies a_2\rdot b_0\in P \implies a_2\in P \text{ or } b_0\in P \implies a_0\rdot b_0=c_0\in P^2\]
 \end{proof}
 \begin{example}
-	$X^n-p$ is irreducible if $p$ is prime because $-p\in p\rdot \Z$ but $-p \notin p^2\rdot \Z$.
+	$X^n-p$ is irreducible if $p$ is prime because $-p\in p\Z$ but $-p \notin p^2\Z$.
 \end{example}
 \begin{crl}
 	$\sqrt[n]{p}\notin \Q$ for all  $n\ge 2$.
