More Formatting Changes

--- a/L10/L10.tex
+++ b/L10/L10.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \chapter{L10: Euclidean Domains and PIDs}
-\begin{dfn}[title = Norm]
+\begin{dfn}[title = Norm,label=norm]
 	Let $R$ be an integral domain.\\
 	Any function
 	\[N\colon R\to \Z^+\cup \{0\}\]
