--- a/L13/L13.tex
+++ b/L13/L13.tex
@@ -78,7 +78,7 @@ Recall that if $F,K$ are fields with $F\subset K$ then \[p(X) \text{ irreducible
 	\[p(X)=a_0+a_1X+\dots+a_nX^n \in R[X]\]
 	and $\gcd(a_0,a_1,\dots,a_n)=1$. Then
 	\[p(X) \text{ irreducible }\in R[X] \Longleftrightarrow p(X) \text{ irreducible }\in F[X]\]
-	\textit{Note:} $\gcd(a_0,a_1,\dots,a_n)=1$ means we cannot write
+	\Note $\gcd(a_0,a_1,\dots,a_n)=1$ means we cannot write
 	\[p(X)=d\rdot p'(X),\quad d\in R\setminus R^\times, \quad \deg p =\deg p'\] 
 \end{crl}
 \begin{proof}
