--- a/L3/L3.tex
+++ b/L3/L3.tex
@@ -9,7 +9,7 @@
 	\begin{dfn}[title = Polynomial in a ring]
 		A \textbf{polynomial} in $X$ with coefficients in $R$ is a formal, finite sum
 		\[a_nX^n+a_{n-1}X^{n-1}+\dots+a_1X+a_0, \quad a_i\in R, i\in \{0, \dots, n\}\]
-		\textbf{\underline{Note:}} If $a_n\ne 0$ and $a_m=0, \quad \forall m>n$. Then we say the \textbf{degree} of the polynomial is $n$.
+		\Note If $a_n\ne 0$ and $a_m=0, \quad \forall m>n$. Then we say the \textbf{degree} of the polynomial is $n$.
 		If $a_k=1$, we often omit it from the notation, e.g
 		\[X^2+2\]
 		has a $1$ "missing" infront of $X^2$.\\
@@ -20,7 +20,7 @@
 		\[R[X] \coloneqq \{a_nX^n+\dots+a_0|a_i \in R\} \]
 		If the degree of $p\in R[X]$ is zero, we say $p$ is a \textbf{constant} polynomial.
 	\end{dfn}
-	Observe that there is an obvious inclusion map from a ring into the ring of polynomials, by taking each element $a\in R$ to the constant polynomial $a\in R[X]$.
+	\Obs that there is an obvious inclusion map from a ring into the ring of polynomials, by taking each element $a\in R$ to the constant polynomial $a\in R[X]$.
 	\begin{align*}
 		&R \to R[X]\\
 		&a\mapsto a
