--- a/L11/L11.tex
+++ b/L11/L11.tex
@@ -1,6 +1,5 @@
 \documentclass[../Main.tex]{subfiles}
 \setcounter{chapter}{10}
-
 \begin{document}
 \chapter{L11: Unique Factorization Domains}
 \begin{dfn}[title = {Irreducible/Reducible, Prime, Associate Elements}]
@@ -12,11 +11,11 @@
 		\item Suppose $r\in R\setminus\{0\},\, r\notin R^\times$\\
 		We say $r$ is \textbf{prime} if $(r)$ is a prime ideal.\\
 		In other words, if $r\mid a\rdot b$, then either $r\mid a$ or $r\mid b$.
-		\item We say $a,b \in R$ are \textbf{associates} if there exists $u\in R^\times$ such that $a=u\rdot b$.
+		\item We say $a,b \in R$ are \textbf{associates} if there exists $u\in R^\times$ such that $a=u\rdot b$.\\ (If $a$ and $b$ generate the same principal ideal, then they are associates. Check HW3 P1)
 	\end{enumerate}
 \end{dfn}
 
-\begin{prop}[title = Prime elements in integral domain are irreducible]
+\begin{prop}[title = Prime elements in integral domain are irreducible,label=11.2]
 	Any prime element in an integral domain is irreducible.
 \end{prop}
 \begin{proof}
@@ -24,13 +23,13 @@
 	Then $p\in (p)$ implies $a\in (p)$ or $b\in (p)$. W.l.o.g let $a\in (p)$.\\
 	So $\exists r\in R$ such that $a=p\rdot r$ and hence
 	\[p=(p\rdot r)\rdot b=p\rdot (r\rdot b)\]
-	Since $R$ is an integral domain then, $1=r\rdot b$, so $b\in R^\times $.
+	Since $R$ is an integral domain, we can \hyperref[prop:cancel]{cancel} $p$, then, $1=r\rdot b$, so $b\in R^\times $.
 \end{proof}
 \begin{example}
-	Irreducible but not prime.\\
+	It turns out to be that the converse is not true, i.e irreducible but not prime elements.\\
 	Consider the ring 
 	\[\Z[\sqrt{-5}] \coloneq \{a+b\sqrt{-5}\mid a,b\in \Z\} \]
-	Then
+	There exists a norm on this (not exactly the same as the \hyperref[dfn:norm]{norm} for Euclidean domains), with properties
 	\begin{itemize}
 		\item $N(a+b\sqrt{-5}) \coloneqq a^2+5b^2$
 		\item $N(x\rdot y)=N(x)\rdot N(y)$
@@ -46,8 +45,11 @@
 	Then
 	\[N(2+\sqrt{-5}) = 4+5 =9 \implies N(a+b\sqrt{-5})\mid 9 \implies N(a+b\sqrt{-5}) = \pm 1 \text{ or } \pm 3\]
 	\Obs that if $b\ne 0$, then \[N(a+b\sqrt{-5}) = a^2+5b^2\ge 5\]
-	Therefore
-	\[b=0\implies N(a+b\sqrt{-5})=N(a)=a^2\implies N(a+b\sqrt{-5})=1\implies a+b\sqrt{-5}\in \Z[\sqrt{-5}]^\times\]
+	Therefore we have to assume $b=0$ if we want the norm to be $\pm 1, \pm 3$ and so
+	\[b=0\implies N(a+b\sqrt{-5})=N(a)=a^2\]
+	So the norm is a perfect square, and since the only candidates are $\pm 1$ and $\pm 3$, the only perfect square between them is $1$ and hence
+	\[N(a+b\sqrt{-5})=1 \implies a+b\sqrt{-5}\in \Z[\sqrt{-5}]^\times\]
+	which means that $2+\sqrt{-5}$ is irreducible.
 \end{proof}
 \begin{claim}
 	$2+\sqrt{-5}$ is \textbf{not} prime.
@@ -55,46 +57,48 @@
 \begin{proof}
 	We know
 	\[3^2=9=(2+\sqrt{-5})\rdot (2-\sqrt{-5}) \in (2+\sqrt{-5})\]
-	However, $3\notin (2+\sqrt{-5})$.\\
+	It remains to show that $3$ is not in the ideal $(2+\sqrt{-5})$, i.e $3\notin (2+\sqrt{-5})$.
 	If $3=(a+b\sqrt{-5})\rdot (2+\sqrt{-5})$, then 
 	\[9=N(3)=N(a+b\sqrt{-5})\rdot N(2+\sqrt{-5}) =N(a+b\sqrt{-5})\rdot 9 \implies N(a+b\sqrt{-5}) =1 \]
 	which immediately tells us $b=0$ and $a=\pm 1$.\\
-	But $3\notin \pm (N(a+b\sqrt{-5})\rdot N(2+\sqrt{-5}))$
+	But $3\ne \pm  (2+\sqrt{-5})$ hence $2+\sqrt{-5}$ is not prime.
 \end{proof}
+We see that in an arbitrary integral domain, the notion of primality and irreduciblity are not the same. However, there are circumstances where they are the same thing.
 \begin{prop}[title = Element in PID is prime iff it is irreducible]
 	In a PID an element is prime \textit{iff} it is irreducible.
 \end{prop}
 \begin{proof}
-	It suffices to show that irreducible $\implies$ prime.\\
-	Suppose $r\in R$ is irreducible and recall that maximal ideals are prime. Hence we will show that $(r)$ is maximal.\\
+	\hyperref[prop:11.2]{Prop 11.2} shows prime $\implies$ irred.; it remains to show irred. $\implies$ prime.\\
+	Suppose $r\in R$ is irreducible and \hyperref[co:7.9]{recall that maximal ideals are prime}. Hence we will show that $(r)$ is maximal.\\
 	Suppose $(r)\subset (m)\subsetneq R$, then
-	\[r\in (m) \implies \exists s\in R,\, r=s\rdot m\implies r \text{ irreducible} \implies s=R^\times \text{ or } m\in R^\times\]
+	\[r\in (m) \implies \exists s\in R,\, r=s\rdot m \underbrace{\implies}_{r \text{ irreducible} } s=R^\times \text{ or } m\in R^\times\]
 	By assumption $(m)\subsetneq R$ and this implies
-	\[m\notin R^\times \implies s\in R^\times \implies (r) = (m)\qedhere\]
+	\[m\notin R^\times \implies s\in R^\times \implies r \text{ and } m \text{ associates} \implies (r) = (m)\qedhere\]
 \end{proof}
 \begin{example}
-	In $\Z$, the irredcibles are the primes (and their negatives)
+	In $\Z$, the irreducibles are the primes (and their negatives)
 \end{example}
-\Obs that the factorization of any integer into primes is \underline{unique}!
+\Obs that the factorization of any integer into primes is \underline{unique}!\\
+We see that irreducibility, in the natural sense, is about not being able to be split up into smaller pieces (up to a unit). Primality, while similar, is more about divisibility. We saw that $9$ could be represented by fundamentally two different ideals, namely $(3)$ and $(2+\sqrt{-5})$.
 \begin{dfn}[title = Unique Factorization Domain]
 	A \textbf{unique factorization domain} (UFD) is an integral domain $R$ such that for all $r\in r\setminus \{0\},\, r\notin R^\times$
 	\begin{enumerate}
-		\item $r=p_1\rdot p_2\rdot \dots\rdot p_k$ for $p_i$ irreducible.
+		\item $r=p_1\rdot p_2\rdot \dots\rdot p_n$ for $p_i$ irreducible.
 		\item This decomposition is unique up to associates and reordering, i.e if 
 		\[r=q_1\rdot \dots \rdot q_m,\quad q_j \text{ irreducible}\]
 		Then after reordering, $q_i=u_ip_i, u_i\in R^\times$ and $n=m$.
 	\end{enumerate}
 \end{dfn}
 \begin{example}
-	Fields are vacuously UFDs
+	Fields are vacuously UFDs, because the definition of a UFD constrains non-units to certain conditions however in a field you only have units, so these constraints don't apply.
 \end{example}
 \begin{example}
-	$\Z$ are a UFD
+	$\Z$ is a UFD.
 \end{example}
 \begin{example}
 	$\Z[\sqrt{-5}]$ is \textbf{not} a UFD as
-	\[3^2=(2+\sqrt{-5})\rdot (2-\sqrt{-5})\]
-	and $3,2\pm \sqrt{-5}$ are irreducibles.
+	\[3^2=9=(2+\sqrt{-5})\rdot (2-\sqrt{-5})\]
+	and $3,2\pm \sqrt{-5}$ are irreducibles which are not associate.
 \end{example}
 \begin{prop}[title = Element in UFD is prime iff it is irreducible]
 	In a UFD, an element is prime \textit{iff} it is irreducible.
@@ -102,24 +106,26 @@
 \begin{proof}
 	It suffices to show once more that irreducible $\implies$ prime.\\
 	Suppose $r\in R$ is irreducible and $a\rdot b\in (r)$ i.e there exists $c\in R$ such that $a\rdot b=r\rdot c$\\
-	By unique factorization
+	By unique factorization in a UFD, $a,b,c$ have unique factorizations, i.e
 	\begin{align*}
-	a=&p_1\rdot p_2\rdot \dots p_n,\quad p_i \text{ irreducible, unique}\\
-	b=&q_1\rdot q_2\rdot \dots q_n,\quad q_j \text{ irreducible, unique}\\
-	c=&r_1\rdot r_2\rdot \dots r_l,\quad r_k \text{ irreducible, unique}
+	a=&p_1\rdot p_2\rdot \dots \rdot p_n,\quad p_i \text{ irreducible, unique}\\
+	b=&q_1\rdot q_2\rdot \dots \rdot q_m,\quad q_j \text{ irreducible, unique}\\
+	c=&r_1\rdot r_2\rdot \dots \rdot r_l,\quad r_k \text{ irreducible, unique}
 	\end{align*}
-	Hence
-	\[p_1\rdot p_2\rdot \dots \rdot p_n \rdot q_n \rdot \dots \rdot q_m = r \rdot r_1 \rdot r_2\rdot  \dots \rdot r_l\]
-	so by unique factorization, w.l.og
+	Since $a\rdot b=r\rdot c$ we have
+	\[p_1\rdot p_2\rdot \dots \rdot p_n \rdot q_1 \rdot \dots \rdot q_m = r \rdot r_1 \rdot r_2\rdot  \dots \rdot r_l\]
+	since $r$ is irreducible, both sides are factorizations into irreducibles. By unique factorization and w.l.o.g. 
 	\[r=u\rdot p_1,\, u\in R^\times \implies r|a\qedhere\]
+	and so $a\in (r)$ which means $(r)$ is a prime ideal (with $q$ you get $b\in (r)$).
 \end{proof}
+\newpage
 \begin{prop}[title=Nonzero elements in UFD have GCD]
 	Let $a,b\in R\setminus \{0\}$ in a UFD. Then there is a greatest common divisor of $a,b$ in $R$.
 \end{prop}
 \begin{proof}
 	We write for $u,v\in R^\times$ and $p_i$'s irreducible
 	\begin{align*}
-	a=u\rdot p_1^{e_1}\rdot p_2^{e_2}\rdot \dots \rdot p_n^{e_n}
+	a=u\rdot p_1^{e_1}\rdot p_2^{e_2}\rdot \dots \rdot p_n^{e_n}\\
 	b=v\rdot p_1^{f_1}\rdot p_2^{f_2}\rdot \dots \rdot p_n^{f_n}
 	\end{align*}
 	We allow some exponents to be $0$ ($p_i^0=1$) and we require $p_i\ne p_j$ if $i\ne j$ for example
@@ -127,18 +133,20 @@
 	12=2^2\rdot 3 \to 12= 2^2\rdot 3^1\rdot 5^0 \\
 	20=2^2\rdot 5 \to 20 =2^2\rdot 3^0\rdot 5^1 
 	\end{pmatrix}\]
+	So the elements $a,b$ can be written in terms of the same irreducibles to certain powers.
 	\begin{claim}
-		$d=p_1^{\min\{e_1,d_1\}}\rdot p_2^{\min\{e_2,d_2\}}\rdot \dots \rdot p_n^{\min\{e_n,d_n\}}$
-		is the $gcd(a,b)$.
+		\[d=p_1^{\min\{e_1,d_1\}}\rdot p_2^{\min\{e_2,d_2\}}\rdot \dots \rdot p_n^{\min\{e_n,d_n\}}\]
+		is the $\gcd$ of $a$ and $b$.
 	\end{claim}
 	\begin{proof}
-		Clearly $d\mid a,\, d\mid b$.\\
-		If $c\mid a, \, c\mid b$, then we want to see that $c\mid d$.\\
-		Unique factorization says for $q_i$ irreducible, $q_i\ne q_j$ and $g_i>0$, we have
-		\[c=q_1^{g_1}\rdot \dots \rdot q_m^{g_m}\]
-		Since $c\mid a,\, c\mid b$, then after changing associates
-		\[\{q_1,\dots,q_n\}\subset \{p_1,\dots,p_n\}, \, g_i\le \min\{e_i,f_i\}\implies c\mid d\qedhere\]
+		Clearly $d\mid a,\, d\mid b$, by construction, since it's factors come from the same set of factors of $a,b$, namely $p_i$. Since $d$ is a common divisor, it remains to show it is a greatest common divisor.\\
+		If $c\,|\, a, \, c\,|\,b$, then we want to see that $c\,|\, d$. 
+		Unique factorization tells us
+		\[c=q_1^{g_1}\rdot \dots \rdot q_m^{g_m}, \quad q_i \text{ irreducible},\quad  q_i\ne q_j, \text{ and } g_i>0\]
+		Since $c\mid a,\, c\mid b$, then after (possibly) changing associates we see that the set of factors of $c$ have to be factors of $a$ and $b$, i.e
+		\[\{q_1,\dots,q_n\}\subset \{p_1,\dots,p_n\}\]
+		and since $c$ divides both $a$ and $b$ then $g_i\le \min\{e_i,f_i\}$ and thus $c\,|\,d$.
 	\end{proof}
-	And so there exists a greatest common divisor of $a,b$ in $R$.
+	Therefore there exists a greatest common divisor of $a,b$ in $R$, namely, the $d$ we have shown.
 \end{proof}
 \end{document}
