--- a/L2/L2.tex
+++ b/L2/L2.tex
@@ -143,7 +143,7 @@ A field $F$ is a commutative ring with $1\ne 0$ such that $F^\times = F \setminu
 \begin{example}
 	$\Z$ is an integral domain,
 \end{example}
-\begin{prop}[title=Cancellation Law]
+\begin{prop}[title=Cancellation Law,label=cancel]
 	Let $R$ be a ring and $a,b,c\in R$.\newline
 	Suppose $a$ is not a zero divisor, then
 		\[ab=ac\implies b=c\]
