--- a/L7/L7.tex
+++ b/L7/L7.tex
@@ -118,7 +118,7 @@ Not all rings admit maximal ideals and a given ring may admit multiple maximal i
 	Since, the only ideals of $R/M$ are $0$ and itself, $R/M$ is a field by Prop 7.1 (ii).
 \end{proof}
 \textbf{Recall:} $P\subset R$ is prime if and only if $R/P$ is an integral domain.
-\begin{crl}[title= Maximal ideals are prime]
+\begin{crl}[title= Maximal ideals are prime,label=7.9]
 	Maximal ideals are prime.
 \end{crl}
 \begin{proof}~\\
