--- a/L13/L13.tex
+++ b/L13/L13.tex
@@ -57,7 +57,7 @@
 	Since $a'(X)$ and $b'(X)$ are equal to the $0$ coset, we cay $a'(X)$ or $b'(X)$ are in $q_iR[X]$ (the ideal being modded out). Therefore
 	\[\frac{1}{q_i}\rdot a'(X) \text{ or } \frac{1}{q_i}b'(X) \in R[X] \implies \frac{d}{q_i}\rdot p(X)=\underbrace{\left[\frac{1}{q_i}\rdot a'(X)\right]}_{\in R[X]}\rdot \underbrace{\left[\frac{1}{q_i}b'(X)\right]}_{\in R[X]} \]
 	Doing this process for all $q_i$'s, we get
-	\[p(X)=\underbrace{a(X)}_{R[X]}\rdot \underbrace{b(X)}_{R[X]}\]
+	\[p(X)=\underbrace{a(X)}_{\in R[X]}\rdot \underbrace{b(X)}_{\in R[X]}\]
 	For example
 	\begin{align*}
 	30\rdot p(X)&=(15X+10)\rdot (30X+6)\\
