--- a/L4/L4.tex
+++ b/L4/L4.tex
@@ -165,7 +165,7 @@ becomes
 	\[I \coloneqq \{p(X)\in R| \text{ all nonzero terms have degree at least 2}\}\]
 	e.g $7X^2+3X^3+10X^9\in I$
 \end{example}
-\Note $0\in I$ because it has \textbf{no} terms with non-zero coefficient.
+\Note $0\in I$ because it has \textbf{no} terms with non-zero coefficient.\\
 \textbf{Exercise:} Prove that $I$ is an ideal.
 Now consider two polynomials $p(X),q(X)\in R$ and $\obar{p(X)}=\obar{q(X)}$, then by definition of equivalence, $p-q\in I$.\\
 So $p-q$ consists of terms of \textit{at least} degree 2, i.e the degree $0$ and degree $1$ parts of $p,q$ agree, e.g
