--- a/L11/L11.tex
+++ b/L11/L11.tex
@@ -58,10 +58,10 @@
 	We know
 	\[3^2=9=(2+\sqrt{-5})\rdot (2-\sqrt{-5}) \in (2+\sqrt{-5})\]
 	It remains to show that $3$ is not in the ideal $(2+\sqrt{-5})$, i.e $3\notin (2+\sqrt{-5})$.
-	If $3=(a+b\sqrt{-5})\rdot (2+\sqrt{-5})$, then 
+	If ${3=(a+b\sqrt{-5})\rdot (2+\sqrt{-5})}$, then 
 	\[9=N(3)=N(a+b\sqrt{-5})\rdot N(2+\sqrt{-5}) =N(a+b\sqrt{-5})\rdot 9 \implies N(a+b\sqrt{-5}) =1 \]
 	which immediately tells us $b=0$ and $a=\pm 1$.\\
-	But $3\ne \pm  (2+\sqrt{-5})$ hence $2+\sqrt{-5}$ is not prime.
+	But $3\ne \pm  (2+\sqrt{-5})$ hence $3\notin (2+\sqrt{-5})$ and so $2+\sqrt{-5}$ is not prime.
 \end{proof}
 We see that in an arbitrary integral domain, the notion of primality and irreduciblity are not the same. However, there are circumstances where they are the same thing.
 \begin{prop}[title = Element in PID is prime iff it is irreducible]
